fixed buttons on smaller screens (still need to fix iPhoneX btn spacing)

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -372,11 +372,11 @@
 
 }
 
+@media only screen and (max-width: 420px) {
+   .social .btn:first-child{
+   margin: 0 auto;
+   margin-bottom: 10px;
+         
+   }
 
-
-
-
-
-
-
-
+}
